--- a/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaComprarBillete.form
+++ b/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaComprarBillete.form
@@ -6,15 +6,14 @@
       <Properties>
         <Property name="title" type="java.lang.String" value="PAGO CORRECTO"/>
         <Property name="alwaysOnTop" type="boolean" value="true"/>
-        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="ff" type="rgb"/>
-        </Property>
         <Property name="location" type="java.awt.Point" editor="org.netbeans.beaninfo.editors.PointEditor">
           <Point value="[200, 200]"/>
         </Property>
-        <Property name="undecorated" type="boolean" value="true"/>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[400, 300]"/>
+        </Property>
         <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[463, 186]"/>
+          <Dimension value="[400, 300]"/>
         </Property>
       </Properties>
 
