--- a/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaMenuPrincipal.form
+++ b/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaMenuPrincipal.form
@@ -35,9 +35,9 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="336" max="32767" attributes="0"/>
+          <EmptySpace min="0" pref="341" max="32767" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Component id="panelGlobal" alignment="0" max="32767" attributes="0"/>
+              <Component id="panelGlobal" alignment="0" pref="341" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -50,10 +50,7 @@
         </Property>
       </Properties>
 
-      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout">
-        <Property name="horizontalGap" type="int" value="15"/>
-        <Property name="verticalGap" type="int" value="15"/>
-      </Layout>
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
       <SubComponents>
         <Container class="javax.swing.JPanel" name="pnlTexto">
           <Properties>
@@ -67,7 +64,9 @@
             </Constraint>
           </Constraints>
 
-          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout">
+            <Property name="verticalGap" type="int" value="15"/>
+          </Layout>
           <SubComponents>
             <Component class="javax.swing.JLabel" name="lbTitulo">
               <Properties>
