--- a/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaMenuPrincipal.form
+++ b/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaMenuPrincipal.form
@@ -37,7 +37,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <EmptySpace min="0" pref="341" max="32767" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Component id="panelGlobal" alignment="0" pref="341" max="32767" attributes="0"/>
+              <Component id="panelGlobal" alignment="0" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
